# numl

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: breast_cancer.ipynb  california_housing.ipynb  mnist_neural.ipynb
numl/: __init__.py  base.py  linear.py  logistic.py  neural.py
tests/: test_linear.py  test_logistic.py  test_neural.py
