[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numl"
version = "0.1.0"
description = "ML-алгоритмы с нуля на NumPy: LinearRegression, LogisticRegression, MNISTNeuralNetwork"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
    { name = "Danil", email = "danilduzinskij@gmail.com" }
]

keywords = [
    "machine learning",
    "numpy",
    "linear regression",
    "logistic regression",
    "mnist",
    "neural network",
    "from scratch",
    "educational",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Минимальные зависимости для работы библиотеки (без dev/examples)
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# pip install numl[dev]
dev = [
    "pytest>=7.0",
]
# pip install numl[examples]
examples = [
    "scikit-learn>=1.3",
    "jupyter>=1.0",
]
# pip install numl[all]
all = [
    "numl[dev]",
    "numl[examples]",
]

[project.urls]
Homepage = "https://github.com/KarIes-ss/numl"
Repository = "https://github.com/KarIes-ss/numl"
Issues = "https://github.com/KarIes-ss/numl/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["numl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
